# gb_emulator

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gb_emulator  pokemon.gbc
.cache/clangd/index/: cart.c.8919B1B9735E2BC8.idx  cart.h.ADB8E95A524FA5B0.idx  main.c.75C48942F0B62AFD.idx
include/: bus.h  cart.h  common.h  cpu.h  instructions.h
src/: .clang-format  bus.c  cart.c  cpu.c  instructions.c  main.c
